--- a/index.htm
+++ b/index.htm
@@ -15,31 +15,36 @@
     <img src="images/illustration-hero.svg" alt="dancing image" class="center">
 
     <div class="one">
-    <h1>Order Summary</h1>
-    <p class="two">
-      You can now listen to millions of songs, audiobooks, and podcasts on any 
-      device anywhere you like!
-    </p>
-  </div>
+        <h1>Order Summary</h1>
+        <p class="two">
+          You can now listen to millions of songs, audiobooks, and podcasts on any 
+          device anywhere you like!
+        </p>
+    </div>
 
 <section>
     <img src="images/icon-music.svg" alt="icon" id="music">
-  <div>
-    <h2 id="plan">Annual Plan</h2>
-    <p class="price">$59.99/year</p>
-  </div>
-    <button  id="change"><b>Change</b></button>
+
+    <div>
+        <h2 id="plan">Annual Plan</h2>
+        <p class="price">$59.99/year</p>
+    </div>
+
+    <button id="change"><b>Change</b></button>
 </section>
  
   <div class="btn">
-   <button id="pay"><strong>Proceed to Payment</strong></button>
-   <br><br>
-   <button id="cancel">Cancel Order</button>
+      <button href="#" id="pay">
+        <strong>Proceed to Payment</strong>
+      </button>
+      <br><br>
+      <button href="#" id="cancel">Cancel Order</button>
   </div>
   
   <div class="attribution">
-   <footer>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.</footer> 
+      <footer>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://twitter.com/TolamiseO" target="_blank">Tolamise Olasehinde</a>
+      </footer> 
   </div>
 </div>
 </body>
